--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,7 @@ main {
 }
 
 .produits li {
+    display: inline-block;
     flex-grow: 2;
     padding: 2% 1rem;
     transition: all 0.2s ease-in-out;
