modif photo css

--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ main {
 
 .produits figure {
 
-    border-color: #151515;
+    border: 2px #151515;
     text-align: center;
     margin: 0;
     padding: 1.5rem .75rem;
