--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,7 @@ main {
 
 .produits figcaption h2 {
     text-align: center;
+    color: #ff8800;
     margin: .5em 0 0;
     line-height: 1.1;
 }
