modif main.css police H2

--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ main {
 
 
 .produits {
-    display: inline-block;
+    display: block;
     flex-direction: row;
     list-style-type: none;
     padding: 0;
