modif main.css police H2

--- a/css/main.css
+++ b/css/main.css
@@ -73,8 +73,9 @@ main {
 
 
 .produits {
-    display: block;
+    display: inline-flex;
     flex-direction: row;
+    flex-grow: 2;
     list-style-type: none;
     padding: 0;
 }
