modif main.css police H2

--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ main {
 
 
 .produits {
-    display: inline-flex;
+    display: flex;
     flex-direction: row;
     flex-grow: 2;
     list-style-type: none;
