--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,8 @@ html,
 body {
     font-family: "Segoe UI", Arial, sans-serif;
     font-weight: 400;
-    font-size: 1em;
+    font-size: 1.3rem;
+    line-height: 1.4;
     background: #fff;
     color: #151515
 }
