modif main.css police H2

--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ main {
 
 .produits {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     list-style-type: none;
     padding: 0;
 }
